# constitution_llm

./: .env.example  .gitignore  EVALUATION_GUIDE.md  README.md  checkpoint_50percent_96polities.csv  classify_assembly.py  config.py  demo.ipynb  main.py  pyproject.toml  requirements.txt  run.sh
docs/: BEDROCK_SETUP.md
docs/codebook/: codebook.aux  codebook.fdb_latexmk  codebook.fls  codebook.out  codebook.tex
evaluation/: __init__.py  analyzer.py  metrics.py  notebook_utils.py
models/: __init__.py  base.py  llm_clients.py  search_agents.py
pipeline/: __init__.py  batch_gemini.py  batch_runner.py  classify_assembly.py  jsonl_batch_runner.py  post_processing.py  pre_search.py  predictor.py  search_predictor.py
prompts/: __init__.py  base_builder.py  constitution.py  indicators.py  multiple_builder.py  polity_constitution.py  polity_indicators.py  sequential_builder.py  single_builder.py
scripts/: csv_to_jsonl.py
src/: build_batch_jsonl.py  csv_to_jsonl.py  diagnose_batch.py
tacc/: aggregate_ppl.py  evaluate_probe.py  perplexity_probe.py
utils/: README_SANITY_CHECK.md  __init__.py  config.py  cost_tracker.py  data_cleaner.py  data_loader.py  encoding_fix.py  json_parser.py  langsmith_utils.py  llm_clients.py  logger.py  logprob_utils.py  prompt.py  sanity_check.py  search_agents.py
verification/: __init__.py  base.py  cove.py  self_consistency.py
