[project]
name = "constitution-llm"
version = "0.1.0"
description = "This project leverages Large Language Models (LLMs) to annotate leader constraints across history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "chardet>=5.0.0",
    "ddgs>=6.0.0",
    "google-genai>=1.0.0",
    "google-generativeai>=0.8.0",
    "ipykernel>=6.20.0",
    "jupyter>=1.0.0",
    "langsmith>=0.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]
